add yml files to initial sparse checkout for test environment

--- a/eng/pipelines/templates/steps/initialize-test-environment.yml
+++ b/eng/pipelines/templates/steps/initialize-test-environment.yml
@@ -20,6 +20,7 @@ steps:
       parameters:
         Paths:
           - '**/*.xml'
+          - '**/ci*.yml' # necessary for save-package-properties.yml
           - ${{ if not(parameters.CheckoutRecordings) }}:
             - '!sdk/**/test-recordings'
             - '!sdk/**/session-records'
