Update verify required maven artifacts to handle ArtifactsList or PackageInfo

--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -196,6 +196,7 @@ jobs:
           arguments: >
             -BuildOutputDirectory $(System.DefaultWorkingDirectory)/build
             -ArtifactsList ('$(ArtifactsJson)' | ConvertFrom-Json | Select-Object name, groupId)
+            -PackageInfoDir $(Build.ArtifactStagingDirectory)/PackageInfo
             -InformationAction Continue
 
       - task: PowerShell@2
@@ -327,9 +328,14 @@ jobs:
           ServiceDirectory: "template"
           TestPipeline: ${{ parameters.TestPipeline }}
 
-      - template: /eng/common/pipelines/templates/steps/verify-readme.yml
-        parameters:
-          ScanPath: $(Build.SourcesDirectory)/sdk/${{ parameters.ServiceDirectory }}
+      - ${{ if and(eq(variables['Build.Reason'], 'PullRequest'), eq(parameters.ServiceDirectory, 'auto')) }}:
+        - template: /eng/common/pipelines/templates/steps/verify-readmes.yml
+          parameters:
+            PackagePropertiesFolder: $(Build.ArtifactStagingDirectory)/PackageInfo
+      - ${{ else }}:
+        - template: /eng/common/pipelines/templates/steps/verify-readme.yml
+          parameters:
+            ScanPath: $(Build.SourcesDirectory)/sdk/${{ parameters.ServiceDirectory }}
 
       - template: /eng/common/pipelines/templates/steps/verify-links.yml
         parameters:
@@ -340,9 +346,10 @@ jobs:
             Directory: sdk/${{ parameters.ServiceDirectory }}
           CheckLinkGuidance: $true
 
-      - template: /eng/common/pipelines/templates/steps/verify-samples.yml
-        parameters:
-          ServiceDirectory: ${{ parameters.ServiceDirectory }}
+      # JRS - what to do here. For the moment comment it out to test the other steps
+      # - template: /eng/common/pipelines/templates/steps/verify-samples.yml
+      #   parameters:
+      #     ServiceDirectory: ${{ parameters.ServiceDirectory }}
 
       # Use BasePathLength of 38 instead of the default 49 as some released files fail when the number is higher.
       - template: /eng/common/pipelines/templates/steps/verify-path-length.yml
@@ -351,13 +358,18 @@ jobs:
           BasePathLength: 38
 
       - ${{if ne(parameters.SDKType, 'data')}}:
-        - ${{ each artifact in parameters.Artifacts }}:
-          - ${{if ne(artifact.skipVerifyChangelog, 'true')}}:
-            - template: /eng/common/pipelines/templates/steps/verify-changelog.yml
-              parameters:
-                PackageName: ${{artifact.name}}
-                ServiceName: ${{parameters.ServiceDirectory}}
-                ForRelease: false
+        - ${{ if and(eq(variables['Build.Reason'], 'PullRequest'), eq(parameters.ServiceDirectory, 'auto')) }}:
+          - template: /eng/common/pipelines/templates/steps/verify-changelogs.yml
+            parameters:
+              PackagePropertiesFolder: $(Build.ArtifactStagingDirectory)/PackageInfo
+        - ${{ else }}:
+          - ${{ each artifact in parameters.Artifacts }}:
+            - ${{if ne(artifact.skipVerifyChangelog, 'true')}}:
+              - template: /eng/common/pipelines/templates/steps/verify-changelog.yml
+                parameters:
+                  PackageName: ${{artifact.name}}
+                  ServiceName: ${{parameters.ServiceDirectory}}
+                  ForRelease: false
 
       # We `install` the code quality reports tooling into our local m2 cache separately from building the Maven project
       # reports. This means it is available as part of that, but also so that this is not documented in the project report.
