--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -349,10 +349,24 @@ jobs:
             Directory: sdk/${{ parameters.ServiceDirectory }}
           CheckLinkGuidance: $true
 
-      # JRS - what to do here. For the moment comment it out to test the other steps
-      # - template: /eng/common/pipelines/templates/steps/verify-samples.yml
-      #   parameters:
-      #     ServiceDirectory: ${{ parameters.ServiceDirectory }}
+      - ${{ if and(eq(variables['Build.Reason'], 'PullRequest'), eq(parameters.ServiceDirectory, 'auto')) }}:
+        - pwsh: |
+            $diffJson = Get-Content '$(Build.ArtifactStagingDirectory)/diff/diff.json' -Raw
+            $diff = ConvertFrom-Json $diffJson
+            $changedServicesString = ''
+            if ($diff.ChangedServices) {
+                $changedServicesString = $diff.ChangedServices -join ","
+            }
+            Write-Host "changedServicesString='$changedServicesString'"
+            Write-Host "##vso[task.setvariable variable=SamplesServiceDirectories;]$changedServicesString"
+          displayName: Get samples service directories from PR diff
+        - template: /eng/common/pipelines/templates/steps/verify-samples.yml
+          parameters:
+            ServiceDirectories: $(SamplesServiceDirectories)
+      - ${{ else }}:
+        - template: /eng/common/pipelines/templates/steps/verify-samples.yml
+          parameters:
+            ServiceDirectory: ${{ parameters.ServiceDirectory }}
 
       # Use BasePathLength of 38 instead of the default 49 as some released files fail when the number is higher.
       - template: /eng/common/pipelines/templates/steps/verify-path-length.yml
