add annotation-processor to clientcore pom

--- a/sdk/clientcore/tools/annotation-processor/pom.xml
+++ b/sdk/clientcore/tools/annotation-processor/pom.xml
@@ -5,9 +5,10 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.clientcore.tools</groupId>
+  <groupId>io.clientcore</groupId>
   <artifactId>annotation-processor</artifactId>
-  <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore.tools:annotation-processor;external_dependency} -->
+  <packaging>jar</packaging>
+  <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:annotation-processor;current} -->
 
   <name>Client Core Compile-Time Annotation Processor</name>
   <description>The client-core annotation processor for introducing compile-time code generation for libraries based on client core</description>
