--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <module>sdk/containerregistry</module>
     <module>sdk/containerservicefleet</module>
     <module>sdk/contentsafety</module>
+    <module>sdk/contoso</module>
     <module>sdk/core</module>
     <module>sdk/cosmos</module>
     <module>sdk/cosmosdbforpostgresql</module>
