--- a/sdk/clientcore/tools/pom.xml
+++ b/sdk/clientcore/tools/pom.xml
@@ -10,5 +10,6 @@
   <version>1.0.0</version> <!-- Need not change for every release-->
   <modules>
     <module>annotation-processor</module>
+    <module>annotation-processor-dependency-tests</module>
   </modules>
 </project>
