--- a/sdk/parents/clientcore-parent/pom.xml
+++ b/sdk/parents/clientcore-parent/pom.xml
@@ -228,6 +228,8 @@
 
     <!-- Skips Spotless running code style formatting verification. -->
     <spotless.check.skip>false</spotless.check.skip>
+    <!-- Skips annotation processing by default -->
+    <enable.annotation.processing>false</enable.annotation.processing>
   </properties>
 
   <dependencies>
@@ -733,7 +735,7 @@
               <annotationProcessorPath>
                 <groupId>io.clientcore</groupId>
                 <artifactId>annotation-processor</artifactId>
-                <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:annotation-processor;current} -->
+                <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:annotation-processor;dependency} -->
               </annotationProcessorPath>
             </annotationProcessorPaths>
             <createMissingPackageInfoClass>false</createMissingPackageInfoClass>
