--- a/sdk/clientcore/pom.xml
+++ b/sdk/clientcore/pom.xml
@@ -14,6 +14,8 @@
     <module>http-okhttp3</module>
     <module>optional-dependency-tests</module>
     <module>http-stress</module>
+    <module>annotation-processor</module>
+    <module>annotation-processor-tests</module>
     <module>tools</module>
   </modules>
 </project>
