--- a/eng/.docsettings.yml
+++ b/eng/.docsettings.yml
@@ -101,6 +101,8 @@ known_content_issues:
   - ['sdk/clientcore/http-okhttp3/README.md', '#3113']
   - ['sdk/clientcore/tools/annotation-processor/README.md', '#3113']
   - ['sdk/clientcore/optional-dependency-tests/README.md', '#3113']
+  - ['sdk/clientcore/annotation-processor/README.md', '#3113']
+  - ['sdk/clientcore/annotation-processor-tests/README.md', '#3113']
   - ['sdk/core/azure-core-experimental/README.md', '#3113']
   - ['sdk/cosmos/faq/README.md', '#3113']
   - ['sdk/cosmos/azure-cosmos-benchmark/README.md', '#3113']
